# tvm-rs

./: .gitignore  Cargo.toml  README.md  hello.t  loop.json  sieve.json  sieve.t  sq  sq-annotated.json  sq.json  sq.t  tvm.js
benches/: loop_benchmark.rs
src/: callable.rs  frame.rs  function.rs  heap.rs  instruction.rs  instruction_tests.rs  lib.rs  main.rs  memory.rs  native.rs  program.rs  program_parser.rs  stack.rs  state.rs  state_utils.rs  tvm.rs  ui.rs
src/ui/: mod.rs  ui.rs
src/ui/inputs/: events.rs  mod.rs
src/ui/widget/: mod.rs
src/vm/: builtins.rs  frame.rs  function.rs  instruction.rs  memory.rs  mod.rs  pointer.rs  program.rs  register.rs  state.rs  tape.rs  tvm.rs
tests/: main.rs  test_loops.rs
tests/common/: mod.rs
