[package]
name = "tvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
incremental = true

[profile.release]
incremental = true

[profile.dev]
incremental = true

[dev-dependencies]
criterion = "0.4.0"
gnuplot = "0.0.37"

[[bench]]
name = "loop_benchmark"
harness = false

[dependencies]
enum_dispatch = "0.3.8"
rand = "0.8.5"
#serde = { version = "1.0.147" }
serde_json = "1.0.86"
tui = "0.19.0"
crossterm = "0.25.0"
log = "0.4.17"
env_logger = "0.9.3"
pretty_env_logger = "0.4.0"